# test_project

./: .gitignore  docker-compose.yml
apps/auth/: .env.sample  .gitignore  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  run_tests.py
apps/auth/src/: utils.py
apps/auth/src/apps/users/: views.py
apps/auth/src/core/: settings.py  urls.py
apps/auth/src/users/: authentication.py  db_connection.py  models.py  urls.py  views.py
apps/auth/src/users/management/commands/: test_mongo.py
apps/auth/src/users/tests/: test_auth.py  test_signin.py  test_signup.py
apps/events/: .env.sample  docker-compose.yml
apps/events/src/apps/events/: filters.py  models.py  serializers.py  urls.py  views.py
apps/events/src/apps/events/migrations/: 0001_initial.py  0002_event_events_even_event_d_2c2da5_idx.py  0003_alter_event_managers_event_is_deleted_and_more.py  0004_alter_event_options_alter_event_managers.py
apps/events/src/core/: settings.py
auth/: .env.sample  Dockerfile  Makefile  conftest.py  docker-compose.yml  pyproject.toml
auth/src/apps/users/: authentication.py  urls.py  utils.py
auth/src/apps/users/tests/: test_auth.py  test_signin.py  test_signup.py
events/: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml
events/src/apps/events/: filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
events/src/apps/events/migrations/: 0001_initial.py
events/src/core/: urls.py
